# PDF_RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
logger/: __init__.py
src/data_ingestion/: ingestion.py
src/data_retriever/: retriever.py
src/prompt/: prompt_library.py
templates/: index.html
